--- a/components/common/image/package.json
+++ b/components/common/image/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nt-image",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "图片",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -14,10 +14,10 @@
   "author": "ascoders",
   "license": "ISC",
   "dependencies": {
-    "nt-transmit-transparently": "^1.0.3"
+    "nt-transmit-transparently": "^1.0.4"
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0",
-    "react-native": "^0.33.0"
+    "react-native": "*"
   }
 }
