--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "mobx-react": "^3.5.5",
     "moment": "^2.15.0",
     "nt-react-native-web": "^0.0.52",
+    "pixi.js": "^4.0.2",
     "rc-animate": "^2.3.1",
     "react": "^15.3.1",
     "react-codemirror": "^0.2.6",
