--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nt-web-input",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "输入框",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "classnames": "^2.2.5",
+    "lodash": "^4.15.0",
     "nt-transmit-transparently": "^1.0.6",
     "nt-transparently-props": "^0.0.4",
     "validator": "^5.7.0"
