--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nt-web-number",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "数字框",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -15,7 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "classnames": "^2.2.5",
-    "nt-web-button": "^1.0.4",
+    "nt-web-select": "^0.0.3",
     "nt-web-input": "^1.0.5",
     "nt-transmit-transparently": "^1.0.6",
     "nt-auto-bind": "^2.0.4",
