--- a/package.json
+++ b/package.json
@@ -93,7 +93,9 @@
     "pixi.js": "^4.0.2",
     "rc-animate": "^2.3.1",
     "react": "^15.3.1",
+    "react-addons-test-utils": "^15.3.2",
     "react-codemirror": "^0.2.6",
+    "react-color": "^2.3.2",
     "react-copy-to-clipboard": "^4.2.3",
     "react-dom": "^15.3.1",
     "react-router": "^2.7.0",
