--- a/components/editor/gaea-editor/package.json
+++ b/components/editor/gaea-editor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gaea-editor",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "盖亚",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -17,6 +17,7 @@
     "mobx-react": "^3.5.5",
     "nt-transparently-props": "^0.0.5",
     "nt-auto-bind": "^2.0.5",
+    "lz-string": "^1.4.4",
     "nt-web-message": "^1.0.5",
     "keymaster": "^1.6.2",
     "classnames": "^2.2.5",
@@ -25,20 +26,19 @@
     "nt-web-tooltip": "^1.0.5",
     "mobx": "^2.4.3",
     "lodash": "^4.15.0",
-    "gaea-preview": "^0.0.10",
+    "gaea-preview": "^0.0.11",
     "nt-web-button": "^1.0.5",
     "sortablejs": "git://github.com/RubaXa/Sortable.git#dev",
     "nt-web-tabs": "^1.0.5",
     "nt-web-checkbox": "^1.0.5",
     "nt-web-input": "^1.0.6",
-    "react-color": "^2.3.2",
-    "nt-web-render-to": "^0.0.1",
+    "nt-web-select": "^0.0.4",
     "nt-web-number": "^1.0.2",
     "nt-web-margin-padding-editor": "^1.1.6",
-    "nt-web-select": "^0.0.4",
+    "react-color": "^2.3.2",
     "nt-web-tree": "^1.0.5",
     "jquery": "^3.1.0",
-    "gaea-model": "^0.0.9"
+    "gaea-model": "^0.0.10"
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0",
