--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "react-color": "^2.3.2",
     "react-copy-to-clipboard": "^4.2.3",
     "react-dom": "^15.3.2",
+    "react-dropzone-component": "^1.2.0",
     "react-router": "^2.7.0",
     "reflect-metadata": "^0.1.8",
     "request": "^2.74.0",
