--- a/components/web-common/auto-complete/package.json
+++ b/components/web-common/auto-complete/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nt-web-auto-complete",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "自动完成",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -13,6 +13,14 @@
   ],
   "author": "ascoders",
   "license": "ISC",
-  "dependencies": {},
-  "peerDependencies": {}
+  "dependencies": {
+    "classnames": "^2.2.5",
+    "jquery": "^3.1.0",
+    "nt-web-input": "^1.0.6",
+    "nt-transmit-transparently": "^1.0.7"
+  },
+  "peerDependencies": {
+    "react": "^0.14.0 || ^15.0.0",
+    "react-dom": "^0.14.0 || ^15.0.0"
+  }
 }
