--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "codemirror": "^5.19.0",
     "css-animation": "^1.3.0",
     "fit-checkbox": "^3.0.32",
-    "font-awesome": "^4.6.3",
+    "font-awesome": "^4.7.0",
     "highlight.js": "^9.6.0",
     "inversify": "^2.0.1",
     "inversify-inject-decorators": "^2.0.0",
@@ -106,6 +106,7 @@
     "react-dropzone-component": "^1.2.0",
     "react-native-web": "0.0.47",
     "react-router": "^2.7.0",
+    "react-slick": "^0.14.5",
     "reflect-metadata": "^0.1.8",
     "request": "^2.74.0",
     "sortablejs": "git://github.com/RubaXa/Sortable.git#dev",
