--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "antd": "^2.4.2",
     "babel-runtime": "^6.11.6",
     "classnames": "^2.2.5",
     "codemirror": "^5.19.0",
