--- a/components/editor/gaea-editor/package.json
+++ b/components/editor/gaea-editor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gaea-editor",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "盖亚",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -15,7 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "mobx-react": "^3.5.5",
+    "react-color": "^2.3.2",
     "nt-auto-bind": "^2.0.5",
+    "nt-web-tooltip": "^1.2.2",
     "nt-transparently-props": "^0.0.5",
     "nt-web-message": "^1.0.5",
     "keymaster": "^1.6.2",
@@ -26,13 +28,11 @@
     "nt-web-select": "^0.0.4",
     "nt-web-switch": "^1.0.5",
     "nt-web-radio": "^1.0.5",
-    "react-color": "^2.3.2",
-    "nt-web-tooltip": "^1.2.0",
     "nt-web-input": "^1.0.6",
     "mobx": "^2.4.3",
     "lz-string": "^1.4.4",
     "lodash": "^4.15.0",
-    "gaea-preview": "^1.0.8",
+    "gaea-preview": "^1.0.9",
     "sortablejs": "git://github.com/RubaXa/Sortable.git#dev",
     "nt-web-number": "^1.0.2",
     "nt-web-checkbox": "^1.0.5",
@@ -40,7 +40,10 @@
     "nt-web-auto-complete": "^1.0.0",
     "nt-web-tree": "^1.0.5",
     "jquery": "^3.1.0",
-    "gaea-model": "^1.0.8"
+    "inversify": "^2.0.1",
+    "reflect-metadata": "^0.1.8",
+    "inversify-inject-decorators": "^2.0.0",
+    "gaea-model": "^1.0.9"
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0",
