--- a/components/common/cli/package.json
+++ b/components/common/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nt-repair-cli",
-  "version": "4.0.1",
+  "version": "4.0.2",
   "description": "本地运行脚本",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -13,7 +13,9 @@
   ],
   "author": "ascoders",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "commander": "^2.9.0"
+  },
   "peerDependencies": {},
   "bin": {
     "nt-repair-cli": "./lib/index.js"
