--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "gulp-cached": "^1.1.0",
     "gulp-nodemon": "^2.1.0",
     "gulp-typescript": "^2.13.6",
+    "happypack": "^3.0.1",
     "html-path-loader": "^0.1.12",
     "json-loader": "^0.5.4",
     "mobx-react-devtools": "^4.2.6",
