--- a/components/common/image-zoom/package.json
+++ b/components/common/image-zoom/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-image-pan-zoom",
-  "version": "1.1.11",
+  "version": "1.1.12",
   "description": "图片手势操作",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -13,9 +13,7 @@
   ],
   "author": "ascoders",
   "license": "ISC",
-  "dependencies": {
-    "nt-auto-bind": "^2.0.5"
-  },
+  "dependencies": {},
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0",
     "react-native": "*"
