--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-before": "npm run tsc && npm run dll && npm run manage -- --router",
     "start-before-production": "npm run tsc && npm run dll-production",
-    "start": "npm run gulp & npm run client-build",
+    "start": "npm-run-all --parallel -l gulp client-build",
     "tsc": "rm -rf built && tsc",
     "dll": "webpack --config built/scripts/webpack/webpack.dll.config.js",
     "dll-production": "webpack --config built/scripts/webpack/webpack.dll.production.config.js",
