--- a/package.json
+++ b/package.json
@@ -101,12 +101,12 @@
     "pure-render-decorator": "^1.2.1",
     "qrcode.react": "^0.6.1",
     "rc-animate": "^2.3.1",
-    "react": "^15.3.2",
-    "react-addons-test-utils": "^15.3.2",
+    "react": "15.3.2",
+    "react-addons-test-utils": "15.3.2",
     "react-codemirror": "^0.2.6",
     "react-color": "^2.3.2",
     "react-copy-to-clipboard": "^4.2.3",
-    "react-dom": "^15.3.2",
+    "react-dom": "15.3.2",
     "react-dropzone-component": "^1.2.0",
     "react-html5video": "^1.2.12",
     "react-native-web": "0.0.47",
